--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
   --wave-base: rgba(255,255,255,.35);
 }
 
-/* Theme text/accents */
-.theme-bio  { --ink:#E7EEF9; --accent:#9BC2FF; }
-.theme-soolo{ --ink:#EEE9FF; --accent:#B7A6FF; }
-.theme-teat { --ink:#D7FFF4; --accent:#FF6B6B; }  /* red vibe for Teatteri headings */
-.theme-elek { --ink:#FFE5E5; --accent:#FF9F9F; }
-.theme-ytx  { --ink:#FFEBDD; --accent:#FFB86B; }
+/* Minimal palettes: max three per page (c1 main accent, c2 secondary, c3 neutral) */
+.theme-bio  { --ink:#E7EEF9; --c1:#9BC2FF; --c2:#A9ADB6; --c3:#D6DEEA; }
+.theme-soolo{ --ink:#EEE9FF; --c1:#B7A6FF; --c2:#A9ADB6; --c3:#E2DBFD; }
+.theme-teat { --ink:#F1EDEB; --c1:#FF6B6B; --c2:#E8C7A1; --c3:#D9D2C8; }   /* coral + sand + soft taupe */
+.theme-elek { --ink:#EAF7F4; --c1:#7FFFE1; --c2:#C4E7DF; --c3:#E3F0EE; }    /* mint + pale aqua + soft grey */
+.theme-ytx  { --ink:#FFEBDD; --c1:#FFB86B; --c2:#EED9C7; --c3:#E9EBEF; }   /* peach + cream + light ink */
+
+/* Use c1 as page accent */
+[class^="theme-"]{ --accent: var(--c1); }
 
 *{box-sizing:border-box}
 html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:var(--ink); transition:color .3s ease; }
 
-/* Cross-fading background layers */
+/* Cross-fading background layers (single-family bg per page; accents do the contrast) */
 .bg-base, .bg-fade{
   position: fixed; inset: 0; z-index: -2;
   transition: opacity .8s ease;
@@ -43,7 +46,7 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 .cat:hover{ background:rgba(255,255,255,.1); border-color:var(--accent); }
 .cat.active{ outline:2px solid color-mix(in oklab, var(--accent) 60%, transparent); background:rgba(255,255,255,.16); color:var(--accent); }
 
-/* Base panel (no tint fill, just glass) */
+/* Panels: glassy, with thicker soft colored edge when .edge */
 .panel{
   background:var(--panel);
   border:1px solid var(--stroke);
@@ -52,12 +55,10 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
   backdrop-filter:blur(8px);
   margin-bottom:20px;
 }
-
-/* NEW: “edged” panels — thick but soft colored edge */
 .panel.edge{
-  --edge: var(--accent); /* default if not overridden inline */
+  --edge: var(--accent);
   border-width:2px;
-  border-color: color-mix(in oklab, var(--edge) 65%, transparent);
+  border-color: color-mix(in oklab, var(--edge) 70%, transparent);
   box-shadow:
     0 10px 34px -16px color-mix(in oklab, var(--edge) 35%, transparent),
     inset 0 0 0 1px color-mix(in oklab, var(--edge) 35%, transparent);
@@ -66,7 +67,7 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 .panel.edge h3,
 .panel.edge strong{ color: var(--edge); }
 
-/* Hero — only darken EDGES, keep center vivid */
+/* Hero: only the edges fade, center stays vivid */
 .hero{
   --ar:16/9; aspect-ratio:var(--ar);
   max-height:60vh; min-height:280px;
@@ -76,12 +77,11 @@ html,body{ margin:0; height:100%; font-family:Inter,system-ui,sans-serif; color:
 }
 .hero::after{
   content:""; position:absolute; inset:0; pointer-events:none;
-  /* clear center, darker edges */
   background:
     radial-gradient(120% 120% at 50% 50%,
-      rgba(0,0,0,0) 58%,
-      rgba(0,0,0,.30) 82%,
-      rgba(0,0,0,.55) 100%);
+      rgba(0,0,0,0) 60%,
+      rgba(0,0,0,.28) 82%,
+      rgba(0,0,0,.48) 100%);
 }
 .slide{ position:absolute; inset:0; opacity:0; transition:opacity 1s ease-in-out; display:flex; }
 .slide.active{ opacity:1; }
@@ -166,11 +166,11 @@ document.addEventListener('DOMContentLoaded', () => {
     }, 7000);
   }
 
-  /* ===== Background gradients (for cross-fade) ===== */
+  /* ===== Backgrounds per section (one family each) ===== */
   const gradients = {
-    bio:           'radial-gradient(1200px 600px at 90% 10%,  #1f1d55 0%, #2f2aa6 45%, #1b1761 100%)', // swapped
+    bio:           'radial-gradient(1200px 600px at 90% 10%,  #1f1d55 0%, #2f2aa6 45%, #1b1761 100%)',
     soolotuotanto: 'radial-gradient(1200px 600px at 10% 10%,  #0f172a 0%, #0b1220 55%, #070b12 100%)',
-    teatteri:      'radial-gradient(1200px 600px at 10% 90%,  #5b0d0d 0%, #8b1e1e 40%, #2a0b0b 100%)', // deeper red field
+    teatteri:      'radial-gradient(1200px 600px at 10% 90%,  #5b0d0d 0%, #8b1e1e 40%, #2a0b0b 100%)',
     elektroninen:  'radial-gradient(1200px 600px at 90% 90%,  #0a3b37 0%, #128277 40%, #072b29 100%)',
     yhteys:        'radial-gradient(1200px 600px at 50% 50%,  #2a1b1b 0%, #3f2716 45%, #1b100a 100%)'
   };
@@ -178,23 +178,17 @@ document.addEventListener('DOMContentLoaded', () => {
   const fadeLayer = document.querySelector('.bg-fade');
   baseLayer.style.background = gradients.soolotuotanto;
 
-  /* ===== Robust audio URL resolver ===== */
+  /* ===== URL resolver (HEAD + tiny ranged GET fallback) ===== */
   async function headOk(url){
-    try {
-      const res = await fetch(url, { method:'HEAD', cache:'no-store' });
-      if (res.ok) return true;
-    } catch {}
-    try {
-      const res = await fetch(url, { headers:{ Range:'bytes=0-0' }, cache:'no-store' });
-      return res.ok || res.status === 206;
-    } catch { return false; }
+    try { const r = await fetch(url, { method:'HEAD', cache:'no-store' }); if (r.ok) return true; } catch{}
+    try { const r = await fetch(url, { headers:{Range:'bytes=0-0'}, cache:'no-store' }); return r.ok || r.status===206; } catch{ return false; }
   }
   async function resolveAudioUrl(folder, file){
-    const folderCands = [folder, folder[0].toUpperCase()+folder.slice(1)];
-    const fileCands = [file, file.replace(/\.mp3$/i,'.MP3'), file.toLowerCase(), file.toUpperCase()];
+    const folderCands=[folder, folder[0].toUpperCase()+folder.slice(1)];
+    const fileCands=[file, file.replace(/\.mp3$/i,'.MP3'), file.toLowerCase(), file.toUpperCase()];
     for (const fldr of folderCands){
       for (const fil of fileCands){
-        const url = 'audio/' + encodeURIComponent(fldr) + '/' + encodeURIComponent(fil);
+        const url='audio/'+encodeURIComponent(fldr)+'/'+encodeURIComponent(fil);
         if (await headOk(url)) return url;
       }
     }
@@ -215,102 +209,72 @@ document.addEventListener('DOMContentLoaded', () => {
 </div>`
     );
   }
-  const fmtTime = s => {
-    if (!isFinite(s)) return "0:00";
-    const m = Math.floor(s/60);
-    const sec = Math.floor(s%60).toString().padStart(2,'0');
-    return `${m}:${sec}`;
-  };
-  function showErr(card, msg, url){
-    const el = card.querySelector('.ws-error');
-    el.style.display = '';
-    el.textContent = '⚠️ ' + msg + (url ? ' ('+url+')' : '');
-  }
-  function clearErr(card){ const el = card.querySelector('.ws-error'); el.style.display='none'; el.textContent=''; }
+  const fmtTime = s => { if (!isFinite(s)) return "0:00"; const m=Math.floor(s/60); const sec=String(Math.floor(s%60)).padStart(2,'0'); return `${m}:${sec}`; };
+  function showErr(card,msg,url){ const el=card.querySelector('.ws-error'); el.style.display=''; el.textContent='⚠️ '+msg+(url?' ('+url+')':''); }
+  function clearErr(card){ const el=card.querySelector('.ws-error'); el.style.display='none'; el.textContent=''; }
 
   let wsInstances = [];
-  function pauseOthers(except){ wsInstances.forEach(w => { if (w !== except && w.isPlaying()) w.pause(); }); }
+  function pauseOthers(except){ wsInstances.forEach(w=>{ if(w!==except && w.isPlaying()) w.pause(); }); }
   function destroyPlayers(){ wsInstances.forEach(w=>{ try{w.destroy()}catch(e){} }); wsInstances=[]; }
 
   /* ===== Faster players: streaming backend + lazy init ===== */
-  async function wirePlayers(scope = document){
+  async function wirePlayers(scope=document){
     const cards = scope.querySelectorAll('.ws-card');
-    if (!cards.length) return;
+    if(!cards.length) return;
 
-    const styles = getComputedStyle(document.body);
-    const waveBase = styles.getPropertyValue('--wave-base').trim() || 'rgba(255,255,255,0.35)';
+    const waveBase = getComputedStyle(document.body).getPropertyValue('--wave-base').trim() || 'rgba(255,255,255,0.35)';
 
-    const build = async (card) => {
-      if (card._wired) return;
-      card._wired = true;
+    const build = async (card)=>{
+      if(card._wired) return; card._wired=true;
 
-      const wave = card.querySelector('.ws-wave');
-      const btn  = card.querySelector('.ws-play');
-      const time = card.querySelector('.ws-time');
-      const desiredFile = card.dataset.file;
-      const folder      = card.dataset.folder;
+      const wave=card.querySelector('.ws-wave');
+      const btn =card.querySelector('.ws-play');
+      const time=card.querySelector('.ws-time');
 
-      const url = await resolveAudioUrl(folder, desiredFile);
-      if (!url){ showErr(card, 'Tiedostoa ei löytynyt', desiredFile); return; }
+      const url = await resolveAudioUrl(card.dataset.folder, card.dataset.file);
+      if(!url){ showErr(card,'Tiedostoa ei löytynyt',card.dataset.file); return; }
 
-      // find the panel edge color for this card
+      // Panel edge color → titles + waveform progress
       const panel = card.closest('.panel');
       let edge = getComputedStyle(panel).getPropertyValue('--edge').trim();
-      if (!edge) {
-        // fallback to theme accent
-        edge = getComputedStyle(document.body).getPropertyValue('--accent').trim() || '#ffffff';
-      }
+      if(!edge){ edge = getComputedStyle(document.body).getPropertyValue('--accent').trim() || '#ffffff'; }
 
-      // Streaming backend for quick start
-      const mediaEl = new Audio();
-      mediaEl.src = url;
-      mediaEl.preload = 'metadata';
-
+      const mediaEl = new Audio(); mediaEl.src=url; mediaEl.preload='metadata';
       const ws = WaveSurfer.create({
         container: wave,
         media: mediaEl,
         waveColor: waveBase,
-        progressColor: edge,   // <-- progress follows the panel edge color
-        height: 56,
-        barWidth: 2,
-        barRadius: 2,
-        responsive: true,
+        progressColor: edge,
+        height:56, barWidth:2, barRadius:2, responsive:true,
       });
       wsInstances.push(ws);
 
-      mediaEl.addEventListener('loadedmetadata', () => {
-        time.textContent = `0:00 / ${fmtTime(ws.getDuration())}`;
-        clearErr(card);
-      });
+      mediaEl.addEventListener('loadedmetadata', ()=>{ time.textContent=`0:00 / ${fmtTime(ws.getDuration())}`; clearErr(card); });
 
-      const onTick = (t)=>{ time.textContent = `${fmtTime(t)} / ${fmtTime(ws.getDuration())}`; };
+      const onTick=t=>{ time.textContent=`${fmtTime(t)} / ${fmtTime(ws.getDuration())}`; };
       ws.on('timeupdate', onTick);
       ws.on('audioprocess', onTick);
-      ws.on('play',  ()=>{ btn.textContent='⏸'; pauseOthers(ws); card.classList.add('playing'); });
-      ws.on('pause', ()=>{ btn.textContent='▶'; card.classList.remove('playing'); });
-      ws.on('error', ()=>{ showErr(card, 'Soitin ei voinut avata tiedostoa.', url); });
+      ws.on('play', ()=>{ btn.textContent='⏸'; pauseOthers(ws); card.classList.add('playing'); });
+      ws.on('pause',()=>{ btn.textContent='▶'; card.classList.remove('playing'); });
+      ws.on('error',()=>{ showErr(card,'Soitin ei voinut avata tiedostoa.',url); });
 
       btn.addEventListener('click', ()=> ws.playPause(), { passive:true });
-      btn.addEventListener('keydown', (e) => {
-        if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); ws.playPause(); }
-      });
+      btn.addEventListener('keydown', e=>{ if(e.key==='Enter'||e.key===' '){ e.preventDefault(); ws.playPause(); }});
     };
 
-    const io = new IntersectionObserver((entries) => {
-      entries.forEach(e => { if (e.isIntersecting) build(e.target); });
-    }, { rootMargin: '200px 0px' });
-
-    cards.forEach(c => io.observe(c));
+    const io=new IntersectionObserver(entries=>{
+      entries.forEach(e=>{ if(e.isIntersecting) build(e.target); });
+    },{ rootMargin:'200px 0px' });
+    cards.forEach(c=>io.observe(c));
   }
 
-  /* ===== Content ===== */
+  /* ===== Content (edges alternate c1 / c2 / c3 as needed, max 3) ===== */
   const content = {
     bio: `
       <section class="panel">
         <h1>Niko Aaltonen</h1>
         <p>Muusikko • Säveltäjä • Pedagogi</p>
-        <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta. Hänen taustansa musiikkituotannon ja teatterin parissa näkyy työssä, jossa yhdistyvät tunnelmalliset äänimaisemat ja vahva emotionaalinen syvyys. Niko luo musiikkia ja äänisuunnitteluja, jotka kertovat tarinoita, herättävät muistoja ja tukevat esitysten visuaalista ja dramaturgista kokonaisuutta. Hänen äänimaailmansa liikkuvat klassisen musiikin, pop/rockin ja elektronisen kokeellisuuden välillä – rajoja pelottomasti rikkoen.</p>
-        <p>Nikon musiikillinen polku alkoi jo nuorena, kun hän osti ensimmäisen kitaransa. Vuosien varrella hän on syventynyt intohimoisesti musiikin eri osa-alueisiin ja opiskellut laajasti useita genrejä ja soittimia, kuten bassoa, rumpuja ja laulua. Hän valmistui muusikoksi Turun konservatoriosta ja palveli tämän jälkeen Puolustusvoimien varusmiessoittokunnassa, josta hän valmistui aliupseerina. Tällä hetkellä Niko opiskelee huilunsoittoa Turun ammattikorkeakoulussa ja jatkaa musiikin tekemistä monipuolisesti eri muodoissa.</p>
+        <p>Niko Aaltonen on säveltäjä, äänisuunnittelija ja monialainen taiteilija Turusta. Hänen taustansa musiikkituotannon ja teatterin parissa näkyy työssä, jossa yhdistyvät tunnelmalliset äänimaisemat ja vahva emotionaalinen syvyys. Niko luo musiikkia ja äänisuunnitteluja, jotka kertovat tarinoita, herättävät muistoja ja tukevat esitysten visuaalista ja dramaturgista kokonaisuutta.</p>
       </section>
     `,
     soolotuotanto: `
@@ -320,7 +284,7 @@ document.addEventListener('DOMContentLoaded', () => {
       </section>
 
       <section class="soolo-grid">
-        <div class="soolo-card panel edge" style="--edge:#B7A6FF">
+        <div class="soolo-card panel edge" style="--edge:var(--c1)">
           <h3>Julkaisu</h3>
           <div class="soolo-embeds">
             <div class="embed embed-spotify">
@@ -333,7 +297,7 @@ document.addEventListener('DOMContentLoaded', () => {
         </div>
       </section>
 
-      <section class="panel edge" style="--edge:#9BC2FF">
+      <section class="panel edge" style="--edge:var(--c1)">
         <h3>Äänitteet</h3>
         ${audioCard("Halusin Kertoo.mp3", "Halusin Kertoo", "soolotuotanto")}
         ${audioCard("Taiteilija.mp3", "Taiteilija", "soolotuotanto")}
@@ -342,16 +306,16 @@ document.addEventListener('DOMContentLoaded', () => {
     teatteri: `
       <section class="panel"><h2>Näytteitä teatterimusiikista</h2></section>
 
-      <!-- First box: RED edge (matches section vibe) -->
-      <section class="panel edge" style="--edge:#FF6B6B">
+      <!-- c1 (coral) -->
+      <section class="panel edge" style="--edge:var(--c1)">
         <h3>Musiikkia näytelmästä Selli</h3>
         <p class="sub" style="margin:-6px 0 12px;color:var(--muted);font-style:italic">Traumaa ja sekavia tunteita</p>
         ${audioCard("selli_2naytos6kohtaus.mp3", "Teeman huipennus", "teatteri_aanisuunnittelu")}
         ${audioCard("selli_4naytos1kohtaus.mp3", "Järkensä menettänyt", "teatteri_aanisuunnittelu")}
       </section>
 
-      <!-- Second box: a warm mate that looks good with red -->
-      <section class="panel edge" style="--edge:#FFC46B">
+      <!-- c2 (sand) -->
+      <section class="panel edge" style="--edge:var(--c2)">
         <h3>Musiikkia näytelmästä Mimmilehmän ja Variksen kesäpäivä laitumella</h3>
         <p class="sub" style="margin:-6px 0 12px;color:var(--muted);font-style:italic">Hullunkurista hauskaa</p>
         ${audioCard("Intromusa.mp3", "Intromusa", "teatteri_aanisuunnittelu")}
@@ -361,14 +325,15 @@ document.addEventListener('DOMContentLoaded', () => {
         ${audioCard("Viimeinen tanssi.mp3", "Viimeinen tanssi", "teatteri_aanisuunnittelu")}
       </section>
 
-      <!-- Third box: cool companion so the set feels balanced -->
-      <section class="panel edge" style="--edge:#7FFFE1">
+      <!-- c3 (soft taupe neutral) -->
+      <section class="panel edge" style="--edge:var(--c3)">
         <h3>Toivonsa kätkenyt — Rohkea ja tulinen</h3>
         ${audioCard("Merituulet.mp3", "Merituulet", "teatteri_aanisuunnittelu")}
       </section>
     `,
     elektroninen: `
-      <section class="panel edge" style="--edge:#FF9F9F"><h2>Elektroninen / Kokeellinen</h2>
+      <!-- c1 mint only (keep it minimal) -->
+      <section class="panel edge" style="--edge:var(--c1)"><h2>Elektroninen / Kokeellinen</h2>
         ${audioCard("1. Elämä on työ.mp3", "Elämä on työ", "elektroninen")}
         ${audioCard("2. Isompi ku beatles.mp3", "Isompi ku beatles", "elektroninen")}
         ${audioCard("3. Laskut.mp3", "Laskut", "elektroninen")}
@@ -378,18 +343,17 @@ document.addEventListener('DOMContentLoaded', () => {
       </section>
     `,
     yhteys: `
-      <section class="panel edge" style="--edge:#FFB86B">
+      <!-- c1 peach for call-to-action -->
+      <section class="panel edge" style="--edge:var(--c1)">
         <h2>Palvelut / Yhteystiedot</h2>
         <h3>Sävellys</h3>
-        <p>Teen sävellyksiä klassisesta musiikista teatteri- ja elokuvamusiikkiin sekä kokonaisiin ääniraitoihin — mihin tahansa projektiin, jonka haluat herättää eloon.</p>
+        <p>Teen sävellyksiä klassisesta musiikista teatteri- ja elokuvamusiikkiin sekä kokonaisiin ääniraitoihin.</p>
         <h3>Laulunkirjoitus</h3>
-        <p>Kirjoitan kappaleita popista, rockista ja metallista aina sooloartistien biitteihin asti. Älä epäröi pyytää myös muiden tyylilajien teoksia.</p>
+        <p>Pop, rock, metalli ja sooloartistien biitit — myös muita tyylejä pyynnöstä.</p>
         <h3>Miksaus</h3>
-        <p>Miksaan kappaleesi tuoden siihen selkeyttä, syvyyttä ja viimeistellyn soinnin.</p>
+        <p>Selkeys, syvyys ja viimeistelty sointi.</p>
         <h3>Kitara-, basso- ja huilutunnit</h3>
-        <p>35€/h. Voimme luoda pitkäaikaisemman suunnitelman taitojesi kehittämiseksi tai keskittyä yksittäisiin ongelmiin, joissa koet olevasi jumissa.</p>
-        <h3>Sävellys- ja laulunkirjoitusopetus</h3>
-        <p>Mahdollista pyynnöstä!</p>
+        <p>35€/h. Yksittäiset ongelmat tai pidempi suunnitelma.</p>
         <h3>Yhteystiedot</h3>
         <p>Puhelin: 045 110 7090 <em>(soitto, tekstiviesti, WhatsApp)</em><br>
            Sähköposti: aaltonenniko989@gmail.com</p>
@@ -397,7 +361,7 @@ document.addEventListener('DOMContentLoaded', () => {
     `
   };
 
-  /* ===== Theme switching with background cross-fade ===== */
+  /* ===== Theme switching + bg cross-fade ===== */
   const themeClass = {
     bio:'theme-soolo', soolotuotanto:'theme-bio',
     teatteri:'theme-teat', elektroninen:'theme-elek', yhteys:'theme-ytx'
@@ -405,16 +369,12 @@ document.addEventListener('DOMContentLoaded', () => {
 
   function applyTheme(cat){
     const body = document.body;
-    const newTheme = themeClass[cat] || 'theme-bio';
-    body.className = newTheme;
+    body.className = themeClass[cat] || 'theme-bio';
 
     const newBg = gradients[cat] || gradients.soolotuotanto;
     fadeLayer.style.background = newBg;
     fadeLayer.style.opacity = '1';
-    setTimeout(() => {
-      baseLayer.style.background = newBg;
-      fadeLayer.style.opacity = '0';
-    }, 800);
+    setTimeout(() => { baseLayer.style.background = newBg; fadeLayer.style.opacity = '0'; }, 800);
 
     document.querySelectorAll('.cat').forEach(a => a.classList.toggle('active', a.dataset.cat===cat));
   }
